--- a/public/openPoints/home.html
+++ b/public/openPoints/home.html
@@ -10,8 +10,7 @@
 <script type="text/javascript">
 
 var hostName = "#HOSTNAME#";
-var portNumber = "#PORTNUMBER#";
-var localUrlStub = "http://" + hostName + ":" + portNumber;
+var localUrlStub = "http://" + hostName;
 
 function a(){
 $.getJSON(url,function(data) { alert(data);});
