removed extra html comments

--- a/public/openPoints/home.html
+++ b/public/openPoints/home.html
@@ -269,7 +269,7 @@ transferString += "&contract=" + contract + "&description=" + description;
 
 var url = localUrlStub + "/transferpoints?" + transferString + "&activities=2&type=Transfer&money=0"
 
-window.alert(url);
+//window.alert(url);
 blockchainRestApi(url, parseTravelPurchase);
 
 }
